# gitp

./: dune-project  gitp.opam
_build/: .db  .digest-db  log
_build/default/: gitp.dune-package  gitp.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: gitp.cma  gitp.cmxa  gitp.cmxs  gitp.ml
_build/default/lib/.gitp.objs/byte/: gitp.cmi  gitp.cmo  gitp.cmt
_build/default/lib/.gitp.objs/native/: gitp.cmx
_build/default/lib/.merlin-conf/: lib-gitp
_build/default/test/.gitp.eobjs/byte/: dune__exe__Gitp.cmi  dune__exe__Gitp.cmti
_build/default/test/.gitp.eobjs/native/: dune__exe__Gitp.cmx
_build/default/test/.merlin-conf/: exe-gitp
_build/install/default/lib/gitp/: META  dune-package  opam
lib/: dune  gitp.ml
test/: dune
